src/sass/4-base/_base.scss
@import '../vars';
@import '../mixins';

// If you plan on changing any of these, please ensure you test with modals and dropdowns (incl. with scrolling content)
// on mobile (on pages that scroll and that don't scroll) in both landscape and portrait mode
.#{$ns}-html {
  height: 100%;
  min-height: 100%; // For android
}

.#{$ns}-body {
  @include xui-container;
  background-color: $xui-body-bg-color;
  min-height: 100%;
  overflow-y: scroll;
}

// Alternative to xui-body for legacy pages
.#{$ns}-container {
  @include xui-container;
}

/*
Should work with or without the xui-html class on the html element so long as xui-html has
a min-height and not a height.
*/
html.#{$ns}-lockscroll {
  overflow: hidden;

  &.#{$ns}-html {
    // Undoes the height set in xui-html. Without this, the scroll-locking CSS will cause the page to scroll
    // to the top when a modal or mobile dropdown is opened
    height: auto;
  }

  /*
	We have to set overflow: hidden on both the body and html elements.  If only the body
	or html element is set by itself, then dropdown lists with no header or footer may cause excessive
	whitespace above or below the dropdown body in Android Chrome (which seems to depend on whether or
	not the address bar is open when you open the dropdown).  That causes lots of scrolling
	and/or content not being visible when the dropdown/modal opens.

	@author dev-johnsanders
	*/
  & body {
    overflow: hidden;
  }
}

